agregar opcion al yml

--- a/service-config/src/main/resources/bootstrap.yml
+++ b/service-config/src/main/resources/bootstrap.yml
@@ -7,6 +7,7 @@ spring:
       server:
         git:
           uri: https://github.com/manuelSmo/Microservicios.git
+          default-label: main
           searchPaths: config-data
           username: ${GIT_USER}
           password: ${GIT_PASSWORD}
