--- a/config-data/service-customer.properties
+++ b/config-data/service-customer.properties
@@ -13,3 +13,4 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 logging.pattern.console="%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
+eureka.client.serviceUrl.defaultZone=http://localhost:8099/eureka/
