--- a/config-data/service-shopping.properties
+++ b/config-data/service-shopping.properties
@@ -14,3 +14,5 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 logging.pattern.console="%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
 eureka.client.serviceUrl.defaultZone=http://localhost:8099/eureka/
+feign.hystrix.enabled=true
+management.endpoints.web.exposure.include="*"
