--- a/config-data/service-shopping.properties
+++ b/config-data/service-shopping.properties
@@ -15,6 +15,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 logging.pattern.console="%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
 eureka.client.serviceUrl.defaultZone=http://localhost:8099/eureka/
 feign.hystrix.enabled=true
-management.endpoints.web.exposure.include="*"
+management.endpoints.web.exposure.include=*
 hystrix.dashboard.proxy-stream-allow-list=localhost
 feign.circuitbreaker.enabled=true
