--- a/config-data/service-customer.properties
+++ b/config-data/service-customer.properties
@@ -14,3 +14,4 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 logging.pattern.console="%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
 eureka.client.serviceUrl.defaultZone=http://localhost:8099/eureka/
+management.endpoints.web.exposure.include=*
