--- a/service-customer/src/main/resources/bootstrap.yml
+++ b/service-customer/src/main/resources/bootstrap.yml
@@ -6,6 +6,11 @@ spring:
     uri: http://localhost:8081
     username: root
     password: s3cr3t
-
+  boot:
+    admin:
+      client:
+        url: http://localhost:8086
+        instance:
+          prefer-ip: true
 
 
