--- a/service-shopping/build.gradle
+++ b/service-shopping/build.gradle
@@ -32,7 +32,7 @@ dependencies {
 
 	implementation 'de.codecentric:spring-boot-admin-starter-client'
 
-	//implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
